--- a/index.html
+++ b/index.html
@@ -148,6 +148,8 @@
     </div>
     <div class="copyright">
         <p>Copyright XBG <i class="fa-solid fa-heart"></i> igop.</p>
+                        <div class="thank you">
+                    <img src="img/thank you.png">
     </div>
 </div>
 
